--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             </div>
             <div class="pl-c-box">
                     <div class="plc-box-img">
-                        <img src="https://s2-techtudo.glbimg.com/I51i6Qxb5NshckcdcdBAm83bX78=/0x0:800x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/i/y/ahsXCTRv2AC4WGPyIXCg/pms-1679302828.57075105-800x800-85.png">
+                        <img src="https://cdn.awsli.com.br/761/761012/produto/218353870/editada--2--uuc9sz9r1e.png">
                     </div>
                     <div class="plc-box-textbox">
-                        <span>Redmi Note 12</span>
+                        <span>Iphone 14s Pro Max</span>
                         <div class="stars-p">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
                         </div>
                         <span>1150R$</span>
                     </div>
