--- a/pages/iphone_14_pro_max/iphone_14_pro_max.html
+++ b/pages/iphone_14_pro_max/iphone_14_pro_max.html
@@ -47,7 +47,7 @@
       </div>
         <div class="sd-storage">
           <h2>Armazenamento:</h2>
-          <span class="alert">*Clique em umas das opções abaixo para ver os preços*</span>
+          <p class="alert">*Clique em umas das opções abaixo para ver os preços*</p>
           <div class="sd-s-btn">
             <button class="storageBtn" id="sBtn1" type="submit">
             <span>128GB</span>
