--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     <footer id="footer">
         <div class="f-main-textbox">
-            <h1>Gil Smartphones</h1>
+            <h1>OnlineCatalog</h1>
             <div class="f-social-medias">
                 <div><a href=""><i class="fa-brands fa-whatsapp"></i></a></div>
                 <div><a href=""><i class="fa-brands fa-instagram"></i></a></div>
