--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>onlineCatalog</title>
+    <title>Catálogo Online</title>
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/reset.css">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="website-logo">
-          <h1>Gil Smartphones</h1>
+          <h1>Catálogo Online</h1>
         </div>
     </header>
     <div class="divisionBorder"></div>
@@ -94,7 +94,7 @@
     </section>
     <footer id="footer">
         <div class="f-main-textbox">
-            <h1>OnlineCatalog</h1>
+            <h1>Catálogo Online</h1>
             <div class="f-social-medias">
                 <div><a href=""><i class="fa-brands fa-whatsapp"></i></a></div>
                 <div><a href=""><i class="fa-brands fa-instagram"></i></a></div>
