--- a/pages/smartphones/iphone_14_pro_max.html
+++ b/pages/smartphones/iphone_14_pro_max.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1 href="/index.html">Gil Smartphones</h1>
+      <h1 href="/index.html">Catálogo Online</h1>
     </header>
     <div class="responsive1">
       <div class="imgbox">
