--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo Online</title>
+    <title>UltraTech</title>
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/reset.css">
@@ -14,14 +14,14 @@
 <body>
     <header>
         <div class="website-logo">
-          <h1>Catálogo Online</h1>
+          <h1>UltraTech</h1>
         </div>
     </header>
     <div class="divisionBorder"></div>
     <section class="main-product">
         <div class="mp-textbox">
             <h1> Tudo Para Seu Smartphone</h1>
-            <p>Melhor Preço De Conquista!</p>
+            <p>Melhor Preço do Município!</p>
             <button type="submit">Entre Em Contato</button>
         </div>
         <div class="mp-img">
@@ -47,6 +47,7 @@
             <div class="plc-box-textbox">
               <span class="ItemName"></span>
               <strong class="ItemPrice"></strong>
+              <span>10% de desconto no Pix!</span>
               <div class="reviewBtn">
                 <button type="submit">Saiba Mais</button>
               </div>
@@ -59,6 +60,7 @@
             <div class="plc-box-textbox">
               <span class="ItemName"></span>
               <strong class="ItemPrice"></strong>
+              <span>10% de desconto no Pix!</span>
               <div class="reviewBtn">
                 <button type="submit">Saiba Mais</button>
               </div>
@@ -71,6 +73,7 @@
             <div class="plc-box-textbox">
               <span class="ItemName"></span>
               <strong class="ItemPrice"></strong>
+              <span>*10% de desconto no Pix!*</span>
               <div class="reviewBtn">
                 <button type="submit">Saiba Mais</button>
               </div>
@@ -83,6 +86,7 @@
             <div class="plc-box-textbox">
               <span class="ItemName"></span>
               <strong class="ItemPrice"></strong>
+              <span class="promotion">10% de desconto no Pix!</span>
               <div class="reviewBtn">
                 <button type="submit">Saiba Mais</button>
               </div>
@@ -94,11 +98,12 @@
     </section>
     <footer id="footer">
         <div class="f-main-textbox">
-            <h1>Catálogo Online</h1>
+            <h1>UltraTech</h1>
             <div class="f-social-medias">
                 <div><a href=""><i class="fa-brands fa-whatsapp"></i></a></div>
                 <div><a href=""><i class="fa-brands fa-instagram"></i></a></div>
             </div>
+            <span>Todos os direitos reservados!</span>
         </div>
     </footer>
     
