--- a/pages/smartphones/iphone_11.html
+++ b/pages/smartphones/iphone_11.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iPhone 11</title>
+    <title>UltraTech - iPhone 11</title>
     
     <link rel="stylesheet" href="smartphone.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1 href="/index.html">Catálogo Online</h1>
+      <h1 href="/index.html">UltraTech</h1>
     </header>
     <div class="responsive1">
       <div class="imgbox">
@@ -46,7 +46,7 @@
       </div>
         <div class="sd-storage">
           <h2>Armazenamento:</h2>
-          <p class="alert">*Clique em umas das opções abaixo para ver os preços*</p>
+          <p class="alert">*Clique em umas das opções abaixo e arraste para ver os preços*</p>
           <div class="sd-s-btn">
             <button class="storageBtn" id="sBtn1" type="submit">
             <span>128GB</span>
